src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Driver_Id__c</fullName>
        <description>Driver id from Tenstreet.</description>
        <label>Driver Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Grade__c</fullName>
        <description>Marketing grade.</description>
        <label>Marketing Grade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Score__c</fullName>
        <description>Marketing Score field from Tenstreet.</description>
        <label>Marketing Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_App_Source__c</fullName>
        <description>App source from Tenstreet.</description>
        <label>TS App Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Declined_Reason__c</fullName>
        <description>Declined reason from Tenstreet.</description>
        <label>TS Declined Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Disqualified_Reason__c</fullName>
        <description>Disqualified reason from Tenstreet.</description>
        <label>TS Disqualified Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Division__c</fullName>
        <description>Division field from Tenstreet.</description>
        <label>TS Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Experience__c</fullName>
        <description>Experience field from Tenstreet.</description>
        <label>TS Experience</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_First_Activity__c</fullName>
        <description>First Activity field from Tenstreet.</description>
        <label>TS First Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Fleet__c</fullName>
        <description>Fleet field from Tenstreet.</description>
        <label>TS Fleet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Last_Activity__c</fullName>
        <description>Last Activity field from Tenstreet.</description>
        <label>TS Last Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Last_App_Date__c</fullName>
        <description>Last Application Date field from Tenstreet.</description>
        <label>TS Last App Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS_Marketing_List__c</fullName>
        <description>Marketing list field from Tenstreet.</description>
        <label>TS Marketing List</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Rehire_Eligible__c</fullName>
        <description>Rehire eligible field from Tenstreet.</description>
        <label>TS Rehire Eligible</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Source__c</fullName>
        <description>Source field from Tenstreet.</description>
        <label>TS Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Status__c</fullName>
        <description>Statue field from Tenstreet.</description>
        <label>TS Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Text Opt Out flag from Tenstreet.</description>
        <label>Text Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>